# plenty

./: .gitignore  Cargo.toml  README.md  eslint.config.js  flake.nix  happ.nix  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/actions/extend-space/: action.yaml
.github/actions/extend-space-macos/: action.yaml
.github/workflows/: release-tauri-app.yaml  site.yaml  test.yaml
assets/: card-3478fc1e.js  columns-59a19001.js  content-area-368b6216.js  header-scroll-menu-480b608e.js  index-13d1faa2.js  index-51b02dd0.css  index-abc4539b.js  index-f5adb33d.css  lit-element-e618a7a4.js
crates/households_types/: Cargo.toml
crates/households_types/src/: lib.rs
crates/producers_types/: Cargo.toml
crates/producers_types/src/: lib.rs
dnas/plenty/: dna.nix
dnas/plenty/workdir/: dna.yaml
dnas/plenty/zomes/coordinator/household/: Cargo.toml  zome.nix
dnas/plenty/zomes/coordinator/household/src/: household.rs  household_to_members.rs  household_to_requestors.rs  lib.rs
dnas/plenty/zomes/coordinator/household/tests/: household.rs  household_to_members.rs  household_to_requestors.rs
dnas/plenty/zomes/coordinator/household/tests/common/: mod.rs
dnas/plenty/zomes/coordinator/households/: Cargo.toml  zome.nix
dnas/plenty/zomes/coordinator/households/src/: active_households.rs  household.rs  household_membership_claim.rs  household_to_members.rs  household_to_requestors.rs  lib.rs  (+2 more)
dnas/plenty/zomes/coordinator/orders/: Cargo.toml  zome.nix
dnas/plenty/zomes/coordinator/orders/src/: all_orders.rs  available_products.rs  household_order.rs  lib.rs  order.rs  producer_delivery.rs  producer_invoice.rs
dnas/plenty/zomes/coordinator/orders/tests/: all_orders.rs  available_products.rs  household_order.rs  order.rs  producer_delivery.rs  producer_invoice.rs
dnas/plenty/zomes/coordinator/orders/tests/common/: mod.rs
dnas/plenty/zomes/coordinator/producers/: Cargo.toml  zome.nix
dnas/plenty/zomes/coordinator/producers/src/: all_producers.rs  categories.rs  lib.rs  producer.rs  product.rs
dnas/plenty/zomes/coordinator/producers/tests/: all_producers.rs  producer.rs  product.rs
dnas/plenty/zomes/coordinator/producers/tests/common/: mod.rs
dnas/plenty/zomes/integrity/household/: Cargo.toml  zome.nix
dnas/plenty/zomes/integrity/households/: Cargo.toml  zome.nix
dnas/plenty/zomes/integrity/orders/: Cargo.toml  zome.nix
dnas/plenty/zomes/integrity/orders/src/: available_products.rs  household_order.rs  lib.rs  order.rs  producer_delivery.rs  producer_invoice.rs  roles.rs
dnas/plenty/zomes/integrity/producers/: Cargo.toml  zome.nix
lobby/: index.html  package.json  vite.config.ts
lobby/src/: lobby-app.ts
site/: .gitignore  index.html  package.json  style.css  vite.config.ts
site/site/pages/: index.rocket.html  pageTreeData.rocketGenerated.json
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
tests/: package.json  vitest.config.ts
tests/src/: app-path.ts  setup.ts
tests/src/plenty/household/: household-to-members.test.ts  household-to-requestors.test.ts  household.test.ts  setup.ts
tests/src/plenty/households/: active-households.test.ts  household-membership-claim.test.ts  household-to-members.test.ts  household-to-requestors.test.ts  household.test.ts  join-household.test.ts  member-to-households.test.ts  setup.ts
tests/src/plenty/orders/: all-orders.test.ts  available-products.test.ts  household-order.test.ts  order.test.ts  producer-delivery.test.ts  producer-invoice.test.ts  setup.ts
tests/src/plenty/producers/: all-producers.test.ts  producer.test.ts  product.test.ts  setup.ts
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: app-styles.ts  context.ts  holochain-app.ts  home-page.ts  members-page.ts  orders-page.ts  overlay-page.ts  producers-page.ts  roles.ts  router.ts  routes-breadcrumbs.ts  sl-combobox.ts  utils.ts  vaadin-grid-form-field-column.ts
ui/src/plenty/household/: context.ts  household-client.ts  household-store.ts  mocks.ts  types.ts
ui/src/plenty/household/elements/: create-household.ts  edit-household.ts  household-detail.ts  household-summary.ts  members-for-household.ts  requestors-for-household.ts
ui/src/plenty/households/: context.ts  households-client.ts  households-store.ts  mocks.ts  notifications.ts  signal.ts  types.ts
ui/src/plenty/households/elements/: active-households.ts  all-members.ts  create-household-membership-claim.ts  create-household.ts  edit-household.ts  household-detail.ts  household-membership-claim-detail.ts  household-membership-claim-summary.ts  household-prompt.ts  household-summary.ts  households-for-member.ts  members-for-household.ts  my-household.ts  requestors-for-household.ts
ui/src/plenty/orders/: context.ts  mocks.ts  orders-client.ts  orders-store.ts  types.ts
ui/src/plenty/orders/elements/: all-orders.ts  available-products-detail.ts  available-products-for-order.ts  available-products-summary.ts  closed-order-detail.ts  create-available-products.ts  create-household-order.ts  create-order.ts  create-producer-delivery.ts  create-producer-invoice.ts  edit-available-products.ts  edit-household-order.ts  edit-order.ts  edit-producer-delivery.ts  edit-producer-invoice.ts  household-order-detail.ts  household-order-summary.ts  household-orders-for-order.ts  households-orders-summary.ts  my-household-order.ts  order-detail.ts  order-summary.ts  producer-deliveries-for-order.ts  producer-delivery-detail.ts  producer-delivery-summary.ts  producer-invoice-detail.ts  producer-invoice-summary.ts  producer-invoices-for-order.ts
ui/src/plenty/producers/: context.ts  mocks.ts  producers-client.ts  producers-store.ts  types.ts
ui/src/plenty/producers/elements/: all-producers.ts  create-producer.ts  create-product.ts  edit-producer.ts  edit-product.ts  producer-detail.ts  producer-summary.ts  producers-for-liason.ts  product-detail.ts  product-summary.ts  products-for-producer.ts
workdir/: happ.yaml  web-happ.yaml
(+21 files in other folders)
