[patch.crates-io.holo_hash]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"

[patch.crates-io.holochain]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"

[patch.crates-io.holochain_conductor_api]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"

[patch.crates-io.holochain_integrity_types]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"

[patch.crates-io.holochain_keystore]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"

[patch.crates-io.holochain_nonce]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"

[patch.crates-io.holochain_types]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"

[patch.crates-io.holochain_zome_types]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"

[patch.crates-io.kitsune_p2p_timestamp]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"

[patch.crates-io.mr_bundle]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"
[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["src-tauri", "dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.1-rc.1"
hdk = "=0.3.1-rc.1"
serde = "1.0"

[workspace.dependencies.holochain]
default-features = false
features = ["test_utils"]
version = "0.3.1-rc"

[workspace.dependencies.households]
path = "dnas/plenty/zomes/coordinator/households"

[workspace.dependencies.households_integrity]
path = "dnas/plenty/zomes/integrity/households"

[workspace.dependencies.producers]
path = "dnas/plenty/zomes/coordinator/producers"

[workspace.dependencies.producers_integrity]
path = "dnas/plenty/zomes/integrity/producers"
