[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["src-tauri", "dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.1"
hdk = "=0.3.1"
serde = "1.0"

[workspace.dependencies.holochain]
default-features = false
features = ["test_utils"]
version = "0.3.1"

[workspace.dependencies.households]
path = "dnas/plenty/zomes/coordinator/households"

[workspace.dependencies.households_integrity]
path = "dnas/plenty/zomes/integrity/households"

[workspace.dependencies.producers]
path = "dnas/plenty/zomes/coordinator/producers"

[workspace.dependencies.producers_integrity]
path = "dnas/plenty/zomes/integrity/producers"
