[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["src-tauri", "dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "crates/producers_types", "crates/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.4.2"
hdk = "0.3.2"
serde = "1.0"

[workspace.dependencies.holochain]
default-features = false
features = ["test_utils"]
version = "0.3.2"

[workspace.dependencies.households]
path = "dnas/plenty/zomes/coordinator/households"

[workspace.dependencies.households_integrity]
path = "dnas/plenty/zomes/integrity/households"

[workspace.dependencies.orders]
path = "dnas/plenty/zomes/coordinator/orders"

[workspace.dependencies.orders_integrity]
path = "dnas/plenty/zomes/integrity/orders"

[workspace.dependencies.producers]
path = "dnas/plenty/zomes/coordinator/producers"

[workspace.dependencies.producers_integrity]
path = "dnas/plenty/zomes/integrity/producers"

[patch.crates-io]
tx5-go-pion-sys = { path="../tx5/crates/tx5-go-pion-sys"}