[package]
name = "plenty"
version = "0.0.0"
description = "Plenty"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = [] }
tauri-plugin-holochain = { git = "https://github.com/darksoil-studio/tauri-plugin-holochain", branch = "develop" }
tauri-plugin-deep-link = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"

gdk = "0.18"
gtk = "0.18"
mr_bundle = "0.3"
holochain_types = { version = "0.3.1" }
lair_keystore = { version = "0.4.0" }
holochain_client = { version = "0.5.0-rc" }
log = "0.4"
url2 = "0.0.6"
app_dirs2 = "2.5.5"
tempdir = "0.3.7"
anyhow = "1"
serde_json = "1"
serde_yaml = "0.9"

roles_types = { git = "https://github.com/darksoil-studio/roles", branch = "main" }
