[package]
name = "household"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "household"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

household_integrity = { workspace = true } 


[dev-dependencies]
fixt = "0.3.0-beta-dev"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true }
tokio = { version = "1.3", features = ["full"] }

