[package]
name = "orders"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "orders"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

orders_integrity = { workspace = true } 


[dev-dependencies]
fixt = "0.3.1"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true }
tokio = { version = "1.3", features = ["full"] }

households_types = { path = "../../../../../crates/households_types" }
producers_types = { path = "../../../../../crates/producers_types" }
