[package]
name = "producers"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "producers"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

producers_integrity = { workspace = true } 


[dev-dependencies]
fixt = "0.3.1"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain_cascade = "0.3.1"
holochain_state = "0.3.1"
holochain_sqlite = "0.3.1"
holochain = { workspace = true }
tokio = { version = "1.3", features = ["full"] }

