[package]
name = "orders_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "orders_integrity"

[dependencies]
hdi = { workspace = true }

serde = { workspace = true }
households_types = { path = "../../../../../crates/households_types" }
producers_types = { path = "../../../../../crates/producers_types" }
roles_types = {git = "https://github.com/darksoil-studio/roles", branch = "main" }
